--- a/sms.html
+++ b/sms.html
@@ -123,9 +123,9 @@
     <h2 class="mb-4">Screenshots</h2>
     <p>Take a look at how our solution works inside Dynamics 365.</p>
     <div class="row g-3">
-      <div class="col-md-4"><img src="images/screenshot1.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-md-4"><img src="images/screenshot2.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-md-4"><img src="images/screenshot3.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-md-4"><img src="images/attendance.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-md-4"><img src="images/admission.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-md-4"><img src="images/payment.jpg" class="img-fluid rounded shadow"></div>
     </div>
   </section>
 
